Name: lmdb
Version: 0.3.0
Synopsis: Lightning MDB bindings
Category: Database
Description:
  LMDB is a read-optimized Berkeley DB replacement developed by Symas
  for the OpenLDAP project. LMDB has impressive performance characteristics
  and a friendly BSD-style OpenLDAP license. See <http://symas.com/mdb/>.
  .
  This library has Haskell bindings to the LMDB library. You must install
  the lmdb development files before installing this library,
  e.g. `sudo apt-get install liblmdb-dev` works for Ubuntu 14.04.
  .

Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/haskell-lmdb
Copyright: (c) 2014 by David Barbour
License: BSD2
license-file: LICENSE
Stability: experimental
build-type: Simple
cabal-version: >= 1.16.0.3

Source-repository head
  type: git
  location: http://github.com/dmbarbour/haskell-lmdb.git

Library
  hs-Source-Dirs:   src
  default-language: Haskell2010
  Build-Depends:    base (>= 4.6 && < 5)
                  , array
                  , data-default-class
                  , deepseq
                  , free
                  , mtl
                  , exceptions
                  , filepath
                  , text
                  , bytestring
  Build-Tools:      hsc2hs
  Exposed-Modules:  Database.LMDB
                    Database.LMDB.Error
                    Database.LMDB.Internal.Raw
                    Database.LMDB.Stowable
                    Database.LMDB.TxM
                    Database.LMDB.Version
                    Database.LMDB.Interpreter.LMDB
                    Database.LMDB.Types
  Other-Modules:
  extra-libraries: lmdb
  ghc-options: -Wall
               -fwarn-unused-imports
               -fwarn-identities
               -fwarn-missing-signatures
               -fno-warn-unused-do-bind

Test-Suite sanity
    type:               exitcode-stdio-1.0
    main-is:            tests/sanity/Main.hs
    build-depends:      base
                      , lmdb
                      , mtl
                      , bytestring
                      , directory
                      , QuickCheck
                      , threads
    default-language:   Haskell2010
    ghc-options:        -threaded
